<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Hello World!"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tv_l_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_country_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/updated_at"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated_at"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/clear_sky"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_l_u" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_17_c"
        android:textColor="@color/white"
        android:textSize="108sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/low"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp" />

    <TextView
        android:id="@+id/tv_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_14_c"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_low"
        app:layout_constraintStart_toEndOf="@+id/tv_low"
        app:layout_constraintTop_toTopOf="@+id/tv_low" />

    <TextView
        android:id="@+id/tv_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/high"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_temp_max"
        app:layout_constraintEnd_toStartOf="@+id/tv_temp_max"
        app:layout_constraintTop_toTopOf="@+id/tv_temp_max" />

    <TextView
        android:id="@+id/tv_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_22_c"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_low"
        app:layout_constraintEnd_toEndOf="@+id/tv_temp"
        app:layout_constraintTop_toTopOf="@+id/tv_low" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cards_bg"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/sunrise"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/sunrise"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_22_c"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cards_bg"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/sunset"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/sunset"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_22_c"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cards_bg"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/wind"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/wind"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_22_c"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cards_bg"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/pressure"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/pressure"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_22_c"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cards_bg"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/humidity"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_22_c"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_refresh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cards_bg"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_refresh"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/refresh"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>